TestSuite/PascalABCTests/errors/err0104.pas
type TCol = (red, green, blue);

var s : set of integer := [red];
begin
end.